<resources>
    <string name="app_name">Guitar Amps</string>
    <string name="continue_with_fb">Continue with Facebook</string>
    <string name="continue_with_google">Continue with Google          </string>
    <string name="by_continuing">By Continuing, You agree to our</string>
    <string name="termscondition"><u>Terms and Conditions</u></string>
    <string name="and">and</string>
    <string name="privacyPolicy"><u>Privacy Policy</u></string>
    <string name="quick_connect_with">Quickly connect with</string>
    <string name="phoneOrEmailOrUser">Username:</string>
    <string name="login">Log In</string>
    <string name="forgot_your_login">Forgot your login details\?</string>
    <string name="get_help_signing_in"><u>Get help signing in.</u></string>
    <string name="or">OR</string>
    <string name="Loginfailed">Login failed</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="find_your_acc">Find your account</string>
    <string name="enter_your_email_add">Enter your e-mail address associated with your account.</string>
    <string name="send">Send</string>
    <string name="sign_up">Sign Up</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="phone_number">Phone Number</string>
    <string name="user_name">Username</string>
    <string name="user_full_name">Full name</string>
    <string name="mobile_number">Mobile number</string>
    <string name="number">Number</string>
    <string name="emai_id">Email Address</string>
    <string name="location">Location</string>
    <string name="gender">Gender</string>
    <string name="by_signing_up">By signing up, you agree to our</string>
    <string name="create">Create</string>
    <string name="signup">SIGNUP</string>
    <string name="updateProfilePic">Update profile picture</string>
    <string name="take_beautiful_pic">Take a new picture</string>
    <string name="choose_existing_img">Choose an existing photo</string>
    <string name="remove_existing_img">Remove an existing photo</string>
    <string name="browse">Browse</string>
    <string name="please_enter_password">Please enter password</string>
    <string name="please_accept_termsNconditions">Please accept Terms and Conditions</string>
    <string name="username_already_registered">Username already registered</string>
    <string name="email_already_registered">Email already registered</string>
    <string name="phone_already_registered">Mobile number already registered</string>
    <string name="number_verification">Number Verification</string>
    <string name="enter_verification_code">Enter the verification code</string>
    <string name="enter_the_code">Enter the code that we sent to</string>
    <string name="resend_code">Resend Code.</string>
    <string name="verify">Verify</string>
    <string name="invalid_otp_code">Invalid otp code</string>
    <string name="home">Home</string>
    <string name="socail">Social</string>
    <string name="Chat">Chat</string>
    <string name="Profile">Profile</string>
    <string name="sell_your_stuff">Sell Your Stuff</string>
    <string name="featured">Featured</string>
    <string name="time">Time</string>
    <string name="please_follow_user">Please follow users to view</string>
    <string name="post_in_your">posts in your newsfeed</string>
    <string name="find_friends">Find Friends</string>
    <string name="buying">Buying</string>
    <string name="selling">Selling</string>
    <string name="daniel_welllington">Daniel Wellington Classic</string>
    <string name="amelia">Amelia Kelly</string>
    <string name="thousasnd_of_buyer">Thousands of buyer are</string>
    <string name="browsing_yelo">Browsing Guitam Amps right now</string>
    <string name="no_chat_available">No chats available</string>
    <string name="profile">Profile</string>
    <string name="posts">Posts</string>
    <string name="people">People</string>
    <string name="followings">Following</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="sold">Sold</string>
    <string name="favourites">Favorites</string>
    <string name="call">Call</string>
    <string name="Email">Email</string>
    <string name="you">You</string>
    <string name="liked_your_post">liked your post</string>
    <string name="startes_following">started following</string>
    <string name="left_a_review_on">left a review on</string>
    <string name="commented_your_post">left a review on your post</string>
    <string name="startedFollowingYou">started following you</string>
    <string name="welcome_on_yelo">Welcome to Guitam Amps!</string>
    <string name="make_money_selling">Make money selling What you don\'t need</string>
    <string name="and_find_great">and find great deals nearby</string>
    <string name="no_following_yet">No one is following you yet!</string>
    <string name="no_follower_yet">No follower yet!</string>
    <string name="send_a_offer_on_your_product">Sent an offer on your product</string>
    <string name="liked">likes</string>
    <string name="own">own</string>
    <string name="filter">Filters</string>
    <string name="change_Location">Change Location</string>
    <string name="category">Categories</string>
    <string name="distance">Distance</string>
    <string name="sort_by">Sort By</string>
    <string name="please_select_your_loc">Please select location</string>
    <string name="distanceAsc">distanceAsc</string>
    <string name="postedOnDesc">postedOnDesc</string>
    <string name="priceAsc">priceAsc</string>
    <string name="priceDsc">priceDsc</string>
    <string name="newest_first">Newest First</string>
    <string name="closest_first">Closest First</string>
    <string name="price_low_to_high">Price : Low to High</string>
    <string name="price_high_to_low">Price : High to Low</string>
    <string name="posted_within">Posted Within</string>
    <string name="the_last_24hr">The Last 24 hour</string>
    <string name="the_last_7day">The Last 7 days</string>
    <string name="the_last_30day">The Last 30 days</string>
    <string name="all_producs">All Products</string>
    <string name="min_price_cant_be_higher">The minimum price can\'t be higher than the maximum price.</string>
    <string name="change_location">Change Location</string>
    <string name="confirm_location">Confirm Location</string>
    <string name="add_a_review">Add Review</string>
    <string name="share_item">Share Item</string>
    <string name="share_on_fb">Share on facebook</string>
    <string name="copy_image_url">Copy Share URL</string>
    <string name="sold_by">Sold by</string>
    <string name="follow">Follow</string>
    <string name="unfollow">Unfollow</string>
    <string name="description">Description</string>
    <string name="conditions">Condition</string>
    <string name="default_location">1241 East Main Street \n Stamford ct- 06902</string>
    <string name="negotiable">Negotiable</string>
    <string name="not_negotiable">Not Negotiable</string>
    <string name="make_offer">Make Offer</string>
    <string name="your_offer">Your Offer :</string>
    <string name="asking_price">Asking Price :</string>
    <string name="away">away</string>
    <string name="product_location">Products Location</string>
    <string name="url_copied">URL copied</string>
    <string name="report_item">Report Item</string>
    <string name="why_do_you_want">Why do you report this item ?</string>
    <string name="the_product_report_has_been">The product has been reported. Thanks!</string>
    <string name="the_report_is_already_reported">The product is already reported. Thanks!</string>
    <string name="report_user">Report User</string>
    <string name="the_user_report_has_been">The user has been reported. Thanks</string>
    <string name="review">Reviews</string>
    <string name="add_review">Add Review</string>
    <string name="there_is_no_review">There are no reviews on this product,</string>
    <string name="be_the_first">be the first to add one</string>
    <string name="profile_details">Profile details couldn\'t load</string>
    <string name="please_try_again"><u>Please try again</u>.</string>
    <string name="private_information">Private Information</string>
    <string name="setting">Settings</string>
    <string name="website">Website</string>
    <string name="bio">Bio</string>
    <string name="follow_people">Follow People</string>
    <string name="find_facebook_friends">Find Facebook Friends</string>
    <string name="connect_to_contacts">Connect to Contacts</string>
    <string name="account">Account</string>
    <string name="support">Support</string>
    <string name="report_a_problem">Report a Problem</string>
    <string name="about">About</string>
    <string name="search_text">Search…</string>
    <string name="search_post">Search Posts</string>
    <string name="search_people">Search Peoples</string>
    <string name="no_post">No Posts</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="termsNcondition">Terms &amp; Conditions</string>
    <string name="logout">Logout</string>
    <string name="version">App Version</string>
    <string name="are_you_sure_u_want">Are you sure you want to logout?</string>
    <string name="do_you_want_to_sell_it_again">Do you want to sell it again?</string>
    <string name="sell_it_again">Sell it again</string>
    <string name="no_post_yet">No Post Yet!</string>
    <string name="no_sold_yet">Nothing Sold Yet!</string>
    <string name="no_post_found">No Posts Found</string>
    <string name="verified_with">Verified With</string>
    <string name="paypal_me">Paypal.Me</string>
    <string name="payment">Payments</string>
    <string name="my_payment">My Payments</string>
    <string name="no_likes_yet_be_the_first">No Likes Yet! Be the first to like this product</string>
    <string name="no_ads_yet">No Posts yet!</string>
    <string name="snapNpostIn">Snap and post in 30 second to sell stuff!</string>
    <string name="start_selling">Start Selling</string>
    <string name="start_browsing">Start Browsing</string>
    <string name="found_your_fav_yet">No Favorites Found Yet!</string>
    <string name="ads_you_love_and_mark">Ads you love &amp; mark as \'favorite\' will appear here</string>
    <string name="start_discovery">Start Discovering</string>
    <string name="mark_as_sold">Mark As Sold</string>
    <string name="rate_user">Rate User</string>
    <string name="would_you_sell_to_megan_again">Would you sell to</string>
    <string name="again">again?</string>
    <string name="price_offered">Price Offered</string>
    <string name="select_the_buyer_to_rate">Select the buyer to rate</string>
    <string name="sold_it_somewhere_else">Sold it somewhere else</string>
    <string name="want_to_sell_somewhere_else">Do you want to sell somewhere else?</string>
    <string name="i_didnt_sell_it_on_offerup">I didn\'t sell it on Guitar Amps</string>
    <string name="select">Select</string>
    <string name="absolutely_not">Absolutely,</string>
    <string name="not">Not.</string>
    <string name="yes">Yes,</string>
    <string name="Yes">yes</string>
    <string name="no">No</string>
    <string name="definitely">Definitely!</string>
    <string name="submit_rating">Submit Rating</string>
    <string name="you_havnt_received">You haven\'t received any message or offers yet!</string>
    <string name="delete_this_product">Delete this product</string>
    <string name="edit_this_product">Edit this product</string>
    <string name="update">Update</string>
    <string name="update_post">Update Post</string>
    <string name="promotions">Promotions</string>
    <string name="promote_this_item">Promote this item</string>
    <string name="connect_paypal">Connect Paypal</string>
    <string name="simple_image_view">This is simple image view</string>
    <string name="submit">Submit</string>
</resources>