<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:id="@+id/rL_rootElement">

    <!-- Action bar -->
    <RelativeLayout
        android:id="@+id/rL_action_bar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@drawable/bottom_shadow">

        <RelativeLayout
            android:id="@+id/rL_back_btn"
            android:layout_width="?attr/actionBarSize"
            android:layout_height="match_parent">
            <ImageView
                android:src="@drawable/cross_icon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:contentDescription="@string/simple_image_view"/>
        </RelativeLayout>
        <com.demskigroup.guitaramps.custom_fonts.TextViewRobotoMedium
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/purple_color"
            android:layout_centerVertical="true"
            android:layout_toEndOf="@+id/rL_back_btn"
            android:layout_toRightOf="@+id/rL_back_btn"
            android:layout_marginStart="@dimen/five_dp"
            android:layout_marginLeft="@dimen/five_dp"
            android:text="@string/report_user"
            android:textSize="@dimen/action_bar_text_size"/>
    </RelativeLayout>

    <android.support.v7.widget.RecyclerView
        android:id="@+id/rV_reportUser"
        android:layout_marginBottom="@dimen/five_dp"
        android:layout_below="@+id/rL_action_bar"
        android:layout_above="@+id/rL_submit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >
    </android.support.v7.widget.RecyclerView>

    <ProgressBar
        android:id="@+id/progress_bar_reportUser"
        android:visibility="gone"
        android:layout_centerInParent="true"
        android:layout_gravity="center"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:indeterminateDrawable="@drawable/custom_progress_background"
        />

    <RelativeLayout
        android:id="@+id/rL_submit"
        android:layout_alignParentBottom="true"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/purple_color">
        <com.demskigroup.guitaramps.custom_fonts.TextViewRobotoMedium
            android:id="@+id/tV_submit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/submit"
            android:textColor="@color/white"
            android:textSize="@dimen/nineteen_sp"/>
        <ProgressBar
            android:id="@+id/pBar_postReport"
            android:visibility="gone"
            android:layout_centerInParent="true"
            android:layout_gravity="center"
            style="?android:attr/progressBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:indeterminateDrawable="@drawable/white_color_progress_bar_bg"
            />
    </RelativeLayout>
</RelativeLayout>